--- a/src/main/webapp/css/estilos.css
+++ b/src/main/webapp/css/estilos.css
@@ -2,10 +2,23 @@
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0
 		rgba(0, 0, 0, 0.19);
 	padding: 10px;
-	width: 80%!important;
-	margin: 5% auto!important;
+	width: 80% !important;
+	margin: 5% auto !important;
 }
 
-.card .page-header h1 a{
-	text-decoration: none!important;
+.card .page-header h1 a {
+	text-decoration: none !important;
+}
+
+.bkgd {
+	margin: 0px;
+	height: auto;
+	width: 100%;
+	background-image: url(../img/index-bg.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+
+.clear {
+	clear: both;
 }
