redirije al login, muestra nombre de usuario en index, agregue link en registrar y login

--- a/src/main/webapp/css/estilos.css
+++ b/src/main/webapp/css/estilos.css
@@ -6,6 +6,12 @@
 	margin: 5% auto !important;
 }
 
+h5{
+	margin-top: 20px;
+	margin-right: 5px;
+	color: grey;
+}
+
 .card .page-header h1 a {
 	text-decoration: none !important;
 }
